--- a/Nachilfe.html
+++ b/Nachilfe.html
@@ -48,42 +48,42 @@
     <div class="services-container">
         <div class="service">
             <h3>Mathematik</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/images.jpeg" alt="Mathematik" class="service-image">
+            <img src="images.jpeg" alt="Mathematik" class="service-image">
             <p>Ob Bruchrechnung, Algebra oder Analysis – wir helfen dir, Mathe besser zu verstehen!</p>
         </div>
         <div class="service">
             <h3>Sprachen</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/Sprachen.jpg.avif" alt="Sprachen" class="service-image">
+            <img src="Sprachen.jpg.avif" alt="Sprachen" class="service-image">
             <p>Englisch, Deutsch oder Arabisch – wir verbessern deine Sprachkenntnisse gezielt und individuell.</p>
         </div>
         <div class="service">
             <h3>Naturwissenschaften</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/Chemie.jpg" alt="Naturwissenschaften" class="service-image">
+            <img src="Chemie.jpg" alt="Naturwissenschaften" class="service-image">
             <p>Physik & Chemie – wir erklären naturwissenschaftliche Themen verständlich und praxisnah.</p>
         </div>
         <div class="service">
             <h3>Informatik</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/angewandte-informatik-it-kommunikation.webp" alt="Informatik" class="service-image">
+            <img src="angewandte-informatik-it-kommunikation.webp" alt="Informatik" class="service-image">
             <p>Grundlagen der Programmierung & Datenbanken – verständlich und praxisnah.</p>
         </div>
         <div class="service">
             <h3>Wirtschaft & Rechnungswesen</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/Wirtschaft.jpeg" alt="Wirtschaft" class="service-image">
+            <img src="Wirtschaft.jpeg" alt="Wirtschaft" class="service-image">
             <p>Von BWL & VWL bis hin zur Buchführung – alles rund um Wirtschaft und Finanzen.</p>
         </div>
         <div class="service">
             <h3>Prüfungsvorbereitung</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/klausurvorbereitung.png" alt="Prüfungsvorbereitung" class="service-image">
+            <img src="klausurvorbereitung.png" alt="Prüfungsvorbereitung" class="service-image">
             <p>Gezielte Vorbereitung für Klassenarbeiten, Abitur, Uni-Prüfungen oder Sprachtests.</p>
         </div>
         <div class="service">
             <h3>Hausaufgabenhilfe</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/hausaufgaben.jpeg" alt="Hausaufgabenhilfe" class="service-image">
+            <img src="hausaufgaben.jpeg" alt="Hausaufgabenhilfe" class="service-image">
             <p>Individuelle Unterstützung bei Hausaufgaben und Lernmethoden.</p>
         </div>
         <div class="service">
             <h3>Individuelle Lernpläne</h3>
-            <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/lernplan-01.jpg" alt="Lernplan" class="service-image">
+            <img src="lernplan-01.jpg" alt="Lernplan" class="service-image">
             <p>Strukturierte Lernpläne für langfristigen Erfolg und bessere Noten.</p>
         </div>
     </div>
@@ -141,13 +141,13 @@
                 
                 <div class="footer-icons">
                     <a href="https://www.instagram.com/schlauwerk?igsh=d2p2Ym13ZTdibjR6" target="_blank">
-                        <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/instagram-new.png" alt="Instagram">
+                        <img src="instagram-new.png" alt="Instagram">
                     </a>
                     <a href="https://wa.me/491234567890" target="_blank">
-                        <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/whatsappimage.png" alt="whatsapp">
+                        <img src="whatsappimage.png" alt="whatsapp">
                     </a>
                     <a href="mailto:schlauwerk1@gmail.com">
-                        <img src="/Users/rouya/Documents/Meine Webseite für SchlauWerk/img.icons8.com.png" alt="E-Mail">
+                        <img src="img.icons8.com.png" alt="E-Mail">
                     </a>
                 </div>
                 
